# data4tr

./: .coverage  .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  USAGE.md  cli.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
algorithms/: __init__.py  metrics.py
config/: __init__.py  config.py
data4tr/: __init__.py  __main__.py
data4tr/algorithms/: __init__.py  metrics.py
data4tr/config/: __init__.py  config.py  config.yaml
data4tr/exporter/: __init__.py  export_csv.py  export_jsonl.py  schema.json
data4tr/processor/: __init__.py  classify.py  deduplicate.py  normalize.py
data4tr/scraper/: __init__.py  base.py  cleaner.py  scraper.py  sources.yaml
data4tr/scraper/sources/: __init__.py  wikipedia.py
exporter/: __init__.py  export_csv.py  export_jsonl.py
processor/: __init__.py  classify.py  deduplicate.py  normalize.py
scraper/: __init__.py  base.py  cleaner.py  scraper.py
scraper/sources/: __init__.py  wikipedia.py
tests/: __init__.py  test_algorithms.py  test_cleaner.py  test_config.py
